# spanchain

./: .dockerignore  .env.example  .gitattributes  .gitignore  Caddyfile  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  llms.txt  mix.exs
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/assets/: og-card.html
assets/: README.md  index.html  package-lock.json  package.json  vite.config.js
assets/src/: App.jsx  main.jsx
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: CHANGELOG.md  CONTEXT_INDEX.md  architecture-map.md  development.md
docs/adr/: 001-architecture-decisions.md  002-python-sdk-elixir-communication.md  002-python_sdk-komunikacni vzor s Elixir BE.md  003-sgs-crash-recovery.md  004-otlp-compatibility-scope.md  005-sdk-naming-and-registry-publish.md  006-trail-liveview-auth-gate.md  007-run-completeness-primitives.md  008-canonical-ui-stack.md
docs/arch/: README.md  broadway-pipeline.md  data-flow.md  eval-and-replay.md  hash-chain.md  open-questions.md  sdk-contract.md  supervision-and-otp.md  testing-otp.md
lib/: span_chain.ex
lib/span_chain/: agent.ex  application.ex  cassette.ex  cassettes.ex  dead_letter.ex  (+12 more)
public/: index.html
sdk/python/: LICENSE  README.md  pyproject.toml
sdk/python/ghostfactory/: __init__.py  _buffer.py  _context.py  _exporter.py  _span.py  attrs.py
sdk/python/tests/: conftest.py  test_attrs.py  test_eval_id.py  test_exporter.py  test_flush.py  test_otlp.py  test_pooling.py  test_span.py  test_trace.py
test/: span_chain_test.exs  test_helper.exs
(+121 files in other folders)
